--- a/cmd/frontend/internal/app/templates/ui2/app.html
+++ b/cmd/frontend/internal/app/templates/ui2/app.html
@@ -8,6 +8,7 @@
 	<title>{{.Title}}</title>
 	<link rel="stylesheet" href="{{.AssetURL}}/fonts/MenloRegular.css">
 	<link rel="stylesheet" href="{{.AssetURL}}/scripts/ui/assets/dist/style.bundle.css?{{version "scripts/ui/assets/dist/style.bundle.css"}}">
+	<link rel="chrome-webstore-item" href="https://chrome.google.com/webstore/detail/dgjhfomjieaadpoljlnidmbgkdffpack">
 	<!-- Start of Telligent scripts -->
 	<script ignore-csp>
 		; (function (t, r, a, c, k, e, d) { if (!t[k]) { t.GlobalTelligentNamespace = t.GlobalTelligentNamespace || []; t.GlobalTelligentNamespace.push(k); t[k] = function () { (t[k].q = t[k].q || []).push(arguments) }; t[k].q = t[k].q || []; e = r.createElement(a); d = r.getElementsByTagName(a)[0]; e.async = 1; e.src = c; d.parentNode.insertBefore(e, d) } }(window, document, "script", "https://storage.googleapis.com/telligent-artifacts/tracker/tel.js", "telligent"));
