--- a/web/src/settings/team/_OrgSettingsForm.scss
+++ b/web/src/settings/team/_OrgSettingsForm.scss
@@ -1,13 +1,8 @@
-.invite-form {
+.org-settings-form {
     width: 100%;
-    margin-bottom: 1rem;
-    text-align: right;
+    margin-top: 2.5rem;
 
-    &__submit-button {
-        margin-left: .5rem;
-    }
-
-    &__invited-text {
+    &__updated-text {
         opacity: 0;
         transition: opacity 500ms ease-out;
         &--visible {
