web: add page to render shared comments / threads / snippets

--- a/web/src/app.scss
+++ b/web/src/app.scss
@@ -391,3 +391,4 @@ h1 {
 @import './components/CodeExcerpt';
 @import './components/HeroPage';
 @import './settings/SettingsPage';
+@import './comments/CommentsPage';
