--- a/web/src/comments/_CommentsPage.scss
+++ b/web/src/comments/_CommentsPage.scss
@@ -1,4 +1,5 @@
-@import 'Comment';
+@import './Comment';
+@import './CodeView';
 
 .comments-page {
     flex: 1 1 auto;
@@ -41,54 +42,6 @@
         top: 6rem;
         width: 46.3rem;
         margin: auto;
-    }
-    &__table {
-        display: block;
-        padding: 1rem 0;
-        background: #141A2A;
-        width: 100%;
-        overflow-x: auto;
-        table-layout: fixed;
-        &--blurry {
-            filter: blur(3px);
-        }
-    }
-    &__line {
-        font-family: 'Menlo';
-        font-size: .75rem;
-        line-height: 1.5rem;
-        &--main {
-            background: #0D111C;
-        }
-        &--before, &--after {
-            background: #141A2A;
-        }
-    }
-    &__line-content {
-        width: 100%;
-    }
-    &__pre {
-        font-family: 'Menlo';
-        display: inline;
-        padding-right: 1rem;
-        div {
-            display: inline-block;
-        }
-    }
-    &__line-number {
-        text-align: right;
-        color: #293757;
-        padding: 0 1rem 0 1.75rem;
-        display: flex;
-        align-items: center;
-        .icon {
-            height: 1rem;
-            fill: #8296C4;
-            margin-right: 0.1875rem;
-        }
-        &--start-line {
-            padding-left: 0.375rem;
-        }
     }
 
     &__reply-in-editor {
