web: CommentsPage: fix "__no-revision" element height

--- a/web/src/comments/_CommentsPage.scss
+++ b/web/src/comments/_CommentsPage.scss
@@ -22,7 +22,8 @@
         display: flex;
         padding: 0.5rem;
         font-size: .75rem;
-        height: 6em;
+        height: 2rem;
+        flex: none;
         align-items: center;
         width: 100%;
         .icon {
