--- a/web/src/comments/_Comment.scss
+++ b/web/src/comments/_Comment.scss
@@ -10,6 +10,10 @@
 .comment{
     width: 100%;
     padding: .5rem;
+    border-bottom: 1px solid #212C45;
+    &:first-of-type {
+        border-top: 1px solid #212C45;
+    }
     &--targeted{
         animation: highlight 3s;
     }
