--- a/web/src/repo/_RevSwitcher.scss
+++ b/web/src/repo/_RevSwitcher.scss
@@ -16,13 +16,11 @@
         user-select: none;
         transition: all 100ms ease-in;
 
-        &:not(.rev-switcher__rev-display--disabled) {
-            &:hover {
-                border-color: white;
+        &:not(.rev-switcher__rev-display--disabled):hover {
+            border-color: white;
+            color: white;
+            > .rev-switcher__input::placeholder {
                 color: white;
-                > .rev-switcher__input::placeholder {
-                    color: white;
-                }
             }
         }
 
