--- a/web/src/components/_HeroPage.scss
+++ b/web/src/components/_HeroPage.scss
@@ -5,7 +5,7 @@
     flex-direction: column;
     width: 100%;
     min-height: 0;
-    background-color: #151D28;
+    background-color: #0E121B;
     padding-top: 8rem;
     text-align: center;
     align-items: center;
