--- a/web/src/repo/_Blob.scss
+++ b/web/src/repo/_Blob.scss
@@ -12,7 +12,7 @@
         border-collapse: collapse;
 
         white-space: pre;
-        background-color: #151D28;
+        background-color: #0E121B;
         font-family: 'Menlo';
         font-size: 12px;
         line-height: 20px;
