--- a/web/src/repo/_Repository.scss
+++ b/web/src/repo/_Repository.scss
@@ -80,7 +80,7 @@
         min-height: 0;
         min-width: 0;
 
-        background-color: #151D28;
+        background-color: #0E121B;
     }
 
     &__blob-placeholder {
