--- a/web/src/settings/org/_InviteForm.scss
+++ b/web/src/settings/org/_InviteForm.scss
@@ -1,10 +1,14 @@
 .invite-form {
-    width: 100%;
     margin-bottom: 1rem;
     text-align: right;
 
+    &__email {
+        flex: 1 1 auto;
+
+    }
     &__submit-button {
         margin-left: .5rem;
+        flex: 0 0 auto;
     }
 
     &__invited-text {
@@ -13,5 +17,11 @@
         &--visible {
             opacity: 1;
         }
+    }
+
+    &__container {
+        display: flex;
+        width: 100%;
+        max-width: 21rem;
     }
 }
