Web: Display Organization's Editor Configuration in Basic Textbox (#7726)
* Implement basic view of org's editor settings in webapp

--- a/web/src/settings/org/_Org.scss
+++ b/web/src/settings/org/_Org.scss
@@ -2,6 +2,7 @@
 @import './InviteForm';
 @import './OrgSettingsForm';
 @import './OrgAvatar';
+@import './EditorConfiguration';
 
 .org {
     &__avatar-cell {
