show friendly message and suggestions if no repos matched

--- a/web/src/search2/_SearchResults.scss
+++ b/web/src/search2/_SearchResults.scss
@@ -45,4 +45,9 @@
     &__duration {
         margin-left: auto;
     }
+
+    &__query-fix {
+        font-weight: bold;
+        text-decoration: underline;
+    }
 }
