--- a/web/src/repo/_Blob.scss
+++ b/web/src/repo/_Blob.scss
@@ -29,6 +29,7 @@
         text-align: right;
         padding-left: 1rem;
         min-width: 3em;
+        user-select: none;
     }
 
     td.line, td.code {
