public shared links + reply on web & more (#7798)
* web: add the ability to reply to code comments on the web (fixes #7553)

* web: fix page titles of shared comments

* cmd/frontend/internal/graphqlbackend: add new addCommentToThreadShared variant for ULID authentication

* all: add support for public shared items + make all share URLs public by default

* web: enable replying to code comments on web without being in the org

* web: add indicator on comments page explaining the security model

* go generate ./pkg/localstore

* web: rename Input -> CommentsInput (better distinction)

* web: CommentsInput: use proper className for outermost element

* web: CommentsInput: set type="button" for first button in form

* web: CommentsInput: use rem for margins

* web: CommentsInput: flex 10 -> flex 1 (same behavior)

* web: CommentsInput: remove margin-left on markdown-supported style

* web: CommentsInput: remove unused border-radius

* web: fix return type of addCommentToThread

* web: comments: use proper template string style

* web: CommentsPage: make threadUpdates map pure / do not mutate previous state

* web: CommentsPage: use fixed position instead of absolute so it does not break if parent becomes relative

* web: comments: refactor security widget into its own component

* web: CodeView: fix rendering of code snippets from top/bottom of file (fixes #7770)

* web: CommentsInput: avoid DOM manipulation / use state for text area value

* all: make shared URLs map 1:1 with threads/comments

This change makes it so that no matter how many times you share a comment in a
thread, it only ever points to one single shared URL. That is, a shared URL now
maps 1:1 with a thread ID. There is one exception to this, which is a deleted
shared item (not currently possible outside of manual DB edits).

Helps #7736

* backend: make code comments slack and email notifications use shared links (fixes #7736)

* backend: make shared

--- a/web/src/comments/_CommentsPage.scss
+++ b/web/src/comments/_CommentsPage.scss
@@ -1,5 +1,7 @@
 @import './Comment';
 @import './CodeView';
+@import './CommentsInput';
+@import './SecurityWidget';
 
 .comments-page {
     flex: 1 1 auto;
@@ -48,6 +50,13 @@
         width: 21.3125rem;
         display: block;
         margin: auto;
+        margin-top: .5rem;
+        margin-bottom: .5rem;
+    }
+    &__sign-in {
+        display: block;
+        margin: auto;
+        width: 10rem;
         margin-top: .5rem;
         margin-bottom: .5rem;
     }
