show directory listing on `/tree/` routes instead of placeholder hero page (#7778)

--- a/web/src/app.scss
+++ b/web/src/app.scss
@@ -328,7 +328,7 @@ h1 {
     }
 
     th, td {
-        padding: .25rem .5rem;
+        padding: .45rem;
         overflow: hidden;
         text-overflow: ellipsis;
     }
