--- a/web/src/repo/_Repository.scss
+++ b/web/src/repo/_Repository.scss
@@ -2,6 +2,7 @@
 @import './RepoNav';
 @import './RevSwitcher';
 @import './Blob';
+@import './DirectoryPage';
 @import './marketing/Toast';
 @import '../tree/Tree';
 @import '../tree/TreeHeader';
