in search scope label, show repo group's members in browser tooltip
Hovering over (e.g) `repogroup:sample` will show a browser tooltip that lists the repositories that are in that repo group.

--- a/web/src/search2/_ScopeLabel.scss
+++ b/web/src/search2/_ScopeLabel.scss
@@ -17,5 +17,8 @@
 
     &__query {
         font-weight: bold;
+        &-tip {
+            border-bottom: dotted 1px rgba(255, 255, 255, 0.25);
+        }
     }
 }
