fix commit message td class name, add media-xxl screen width

--- a/web/src/app.scss
+++ b/web/src/app.scss
@@ -18,6 +18,7 @@ $media-sm: 576px;
 $media-md: 768px;
 $media-lg: 992px;
 $media-xl: 1200px;
+$media-xxl: 1800px;
 
 // Include only Reboot of Bootstrap v4 as a foundation for our own styles
 @import 'bootstrap/scss/functions';
