improve scss, hide committer and hash columns in small screens (#7949)

--- a/web/src/app.scss
+++ b/web/src/app.scss
@@ -321,6 +321,8 @@ h1 {
     &.table-hover {
         > tbody > tr:hover > td {
             background: rgba(255, 255, 255, 0.05);
+            color: white;
+            opacity: 1;
         }
     }
 
