always show About link on sourcegraph.com, never on on-prem - fixes #7941

--- a/web/src/nav/_Navbar.scss
+++ b/web/src/nav/_Navbar.scss
@@ -14,6 +14,7 @@
         display: flex;
         padding-right: 1rem;
         justify-content: flex-end;
+        align-items: center;
 
         .avatar,
         .avatar-icon {
@@ -23,7 +24,7 @@
     }
 
     &__logo-link,
-    &__right-contents a {
+    &__nav-link {
         outline: 0;
         margin: 0px 1rem;
         display: flex;
