--- a/web/src/app.scss
+++ b/web/src/app.scss
@@ -400,6 +400,7 @@ h1 {
 @import './nav/Navbar';
 @import './auth/PasswordResetPage';
 @import './auth/SignInPage';
+@import './auth/LicensePage';
 @import './search/SearchBox';
 @import './search/SearchResults';
 @import './repo/Repository';
