web: remove <button> nested under <a>

--- a/web/src/comments/_CommentsPage.scss
+++ b/web/src/comments/_CommentsPage.scss
@@ -47,6 +47,7 @@
     }
 
     &__reply-in-editor {
+        text-align: center;
         width: 21.3125rem;
         display: block;
         margin: auto;
