--- a/web/src/comments/_CommentsInput.scss
+++ b/web/src/comments/_CommentsInput.scss
@@ -10,6 +10,7 @@
         flex-wrap: wrap;
     }
     &__button {
+        text-align: center;
         margin-left: 0.5rem;
     }
     &__markdown-supported {
