make default tab size 4, addresses step 1 of #8054

--- a/web/src/repo/_Blob.scss
+++ b/web/src/repo/_Blob.scss
@@ -6,6 +6,7 @@
     position: relative;
     overflow: auto;
     padding: 1rem 0;
+    tab-size: 4;
 
     table {
         border-collapse: collapse;
