--- a/web/src/app.scss
+++ b/web/src/app.scss
@@ -42,6 +42,19 @@ $media-xl: 1200px;
     padding: 0;
 }
 
+// Custom scrollbar
+::-webkit-scrollbar {
+    width: 0.5rem;
+    height: 0.5rem;
+}
+::-webkit-scrollbar-corner,
+::-webkit-scrollbar-track {
+    background-color: transparent;
+}
+::-webkit-scrollbar-thumb {
+    background-color: #2a3a51;
+}
+
 html {
     font-family: 'system';
     // Base for layout rem values
