oops: add back query suggestions menu border

--- a/web/src/search2/_QueryInput.scss
+++ b/web/src/search2/_QueryInput.scss
@@ -27,8 +27,11 @@
         z-index: 1;
         max-height: 25rem;
         margin: 0;
+        overflow-x: hidden;
         overflow-y: auto;
         overflow-y: overlay;
         background-color: #1c2736;
+        border: solid 1px rgb(27, 84, 138);
+        border-top: none;
     }
 }
