Move deep links to sourcegraph.com/open + provide better link unfurling (#8097)
* all: serve editor deep links at sourcegraph.com/open?... instead of about.sourcegraph.com

Fixes #7252

* backend: make sourcegraph.com/open serve nice metadata for link unfurling

* web: comments: ensure 'Open in Sourcegraph Editor' links act consistently with RepoNav

* backend: add nice metadata to sourcegraph.com/c/... sharing links for link unfurling

* web: switch generated editor URLs to in-app ones

* Simplify

--- a/cmd/frontend/internal/app/templates/ui2/app.html
+++ b/cmd/frontend/internal/app/templates/ui2/app.html
@@ -6,6 +6,15 @@
 	<meta charset="utf-8">
 	<meta http-equiv="x-ua-compatible" content="ie=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	{{with .Metadata}}
+		<meta name='description' content="{{.Description}}" />
+		<meta name='twitter:title' content="{{.Title}}" />
+		<meta name='twitter:card' content='summary' />
+		<meta name='twitter:description' content="{{.Description}}" />
+		<meta property="og:type" content="website" />
+		<meta property='og:title' content="{{.Title}}" />
+		<meta property='og:description' content="{{.Description}}" />
+	{{end}}
 	<title>{{.Title}}</title>
 	<link rel="stylesheet" href="{{.AssetURL}}/fonts/MenloRegular.css">
 	<link rel="stylesheet" href="{{.AssetURL}}/scripts/ui/assets/dist/style.bundle.css?{{version "scripts/ui/assets/dist/style.bundle.css"}}">
