--- a/web/src/app.scss
+++ b/web/src/app.scss
@@ -420,3 +420,4 @@ h1 {
 @import './components/HeroPage';
 @import './settings/SettingsPage';
 @import './comments/CommentsPage';
+@import './open/OpenPage';
