style disabled buttons as disabled

--- a/web/src/app.scss
+++ b/web/src/app.scss
@@ -211,10 +211,13 @@ h1 {
     cursor: pointer;
     transition: all 100ms ease-out;
     outline: none;
-    &:focus {
+    &:focus:not(:disabled) {
         outline: none;
         box-shadow: 0 0 0 2px rgba($color-primary, 0.5);
     }
+    &:disabled {
+        opacity: 0.65;
+}
 }
 
 .btn-block {
@@ -233,17 +236,17 @@ h1 {
     .icon {
         @extend .icon-inline;
     }
-    &:hover {
+    &:hover:not(:disabled) {
         color: white;
     }
 }
 
 .btn-primary {
     background: $color-primary;
-    &:hover {
+    &:hover:not(:disabled) {
         background: darken($color-primary, 5%);
     }
-    &:focus {
+    &:focus:not(:disabled) {
         outline: darken($color-primary, 5%);
     }
 }
