rename "editor configuration" concept to "settings file"

--- a/web/src/settings/org/_Org.scss
+++ b/web/src/settings/org/_Org.scss
@@ -1,7 +1,7 @@
 @import './InviteForm';
 @import './OrgSettingsForm';
 @import './OrgAvatar';
-@import './EditorConfiguration';
+@import '../SettingsFile';
 
 .org {
     &__avatar-cell {
