center v-align for icon buttons

--- a/web/src/app.scss
+++ b/web/src/app.scss
@@ -231,6 +231,7 @@ h1 {
     background: transparent;
     color: inherit;
     display: flex;
+    align-items: center;
     border: none;
     cursor: pointer;
     .icon {
