allow users and orgs to create initial config on the web
Previously, orgs needed to create the initial config file in their editor. Users were unable to create config (without SQL DB access).

This makes it so non-editor-beta users can see the configuration. That's OK, and there are now docs about it at https://about.sourcegraph.com/docs/search/#customizing-search-scopes. This does not reveal anything about the editor to these users.

--- a/web/src/settings/_SettingsFile.scss
+++ b/web/src/settings/_SettingsFile.scss
@@ -1,6 +1,7 @@
 .settings-file-container {
     width: 100%;
     margin-top: 2.5rem;
+    line-height: 120%;
 }
 
 .settings-file {
@@ -34,17 +35,16 @@
         border-radius: 2px;
         padding: 0.5rem 1rem;
         font-size: 12px;
+        font-family: monospace;
+        white-space: pre;
         &-editor {
             background-color: #0e121b;
             height: 15rem;
             overflow-y: auto;
             color: $color-text;
-            font-family: monospace;
         }
         table {
-            white-space: pre;
             background-color: #0e121b;
-            font-family: 'Menlo';
         }
     }
 }
